--- a/app/src/main/res/layout/main_screen_first_fragment.xml
+++ b/app/src/main/res/layout/main_screen_first_fragment.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.FirstFragment">
+    tools:context=".activity.MainScreenFirstFragment">
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/main_screen_recycler_view"
         android:layout_width="match_parent"
